--- a/Lab3/contacts.html
+++ b/Lab3/contacts.html
@@ -19,8 +19,8 @@
         <h1>Контакты</h1>
         <p>Вы можете связаться с нами по следующим контактам:</p>
         <ul>
-            <li>Телефон: +7 918 222 75 39</li>
-            <li>Email: antomonova97@gmail.com</li>
+            <li>Телефон: +7 918 427 19 53</li>
+            <li>Email: dims.gel@gmail.com</li>
             <li>Адрес: г. Ростов-на-Дону, ул. ХХХХХ, д. ХХ</li>
         </ul>
     </main>
